[package]
name = "rust-airway"
version = "0.1.0"
edition = "2024"

[dependencies]
k8s-openapi = { version = "0.24.0", features = ["latest"] }
kube = { version = "0.98.0", default-features = false, features = ["derive"] }
schemars = "0.8.22"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
serde_yaml = "0.9.34"

[[bin]]
name = "superservice-flight"
